1. Улучшения Collection API [#286389] refactoring List.of