@@ -12,16 +12,16 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expected = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expected = List.of("k1", "k1/sk1");
         List<String> rsl = Departments.fillGaps(input);
         assertThat(rsl, is(expected));
     }
 
     @Test
     public void whenNotMissed() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expected = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expected = List.of("k1", "k1/sk1");
         List<String> rsl = Departments.fillGaps(input);
         assertThat(rsl, is(expected));
     }
